--- a/Bilinguals.Services/Bilinguals.Services.csproj
+++ b/Bilinguals.Services/Bilinguals.Services.csproj
@@ -78,6 +78,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationRoleManager.cs" />
+    <Compile Include="ApplicationSignInManager.cs" />
+    <Compile Include="ApplicationUserManager.cs" />
     <Compile Include="CommentService.cs" />
     <Compile Include="DialogService.cs" />
     <Compile Include="GroupService.cs" />
