--- a/Bilinguals/Bilinguals.csproj
+++ b/Bilinguals/Bilinguals.csproj
@@ -210,6 +210,13 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
+    <Compile Include="Areas\Admin\Controllers\DialogsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\RolesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SentencesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\UserManagerController.cs" />
+    <Compile Include="Areas\Admin\Models\UserViewModel.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DialogsController.cs" />
     <Compile Include="Controllers\GroupsController.cs" />
@@ -281,6 +288,19 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Areas\Admin\Views\web.config" />
+    <Content Include="Areas\Admin\Views\Dashboard\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_LayoutAdmin.cshtml" />
+    <Content Include="Areas\Admin\Views\Dialogs\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Dialogs\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Dialogs\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Dialogs\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\UserManager\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\UserManager\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\UserManager\ChangePassword.cshtml" />
+    <Content Include="Areas\Admin\Views\UserManager\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\UserManager\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\UserManager\Details.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\Components\bootstrap5-validation.js" />
     <Content Include="Scripts\Components\dropdown-sentence.js" />
@@ -366,6 +386,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Admin\Views\Roles\" />
+    <Folder Include="Areas\Admin\Views\Sentences\" />
     <Folder Include="Avatars\" />
   </ItemGroup>
   <ItemGroup>
